--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   
 </head>
 <body>
-    
+   <header>
+    <div class="testediv">
+        <img src="" alt="">
+        <h1>karlos</h1>
+
+    </div>
+   </header> 
 </body>
 </html>
