--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   
 </head>
 <body>
-   <header>
-    <div class="testediv">
-        <img src="" alt="">
-        <h1>karlos</h1>
-    </div>
-   </header> 
+  <header>
+   <div class="cabecalho img">
+       <img class="logo__principal" src="img/logo.png" alt="Logo" />
+       <h1 class="texto__cabecalho">
+           Agrofloresta e a importância da polinização.
+       </h1>
+       <a class="cabecalho__botao" href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=53&quot; target="_blank" >NRE IVAIPORÃ</a>
+           <br />
+   </div>
+</header>
 </body>
 </html>
