--- a/index.html
+++ b/index.html
@@ -39,5 +39,94 @@
    <img src="img/bananas.png" alt="imagem de um bananal" class="secao1__imagem"/>
 </section>
 <!-- fim da primeira seção -->
+<!-- segunda seção -->
+<section>
+   <div class="secao2__titulo">
+       <p class="secao2__img__titulo">A produção de mel.</p>
+   </div>
+   <div class="secao2__imagens">
+       <div>
+           <img src="img/1.png" alt="Homen colhendo mel" />
+       </div>
+       <div>
+           <img src="img/2.png" alt="Homen colhendo mel" />
+       </div>
+       <div>
+           <img src="img/3.png" alt="homen coletando mel" />
+       </div>
+   </div>
+   <div class="secao2__subtitulo">
+       <h2 class="secao2__img__subtitulo">
+       As abelhas são responsáveis pela produção de mel, cera e outros
+       produtos apícolas que podem representar uma fonte adicional de renda
+       para os agricultores
+       </h2>
+   </div>
+</section>
+<!-- fim da segunda -->
+ <!--terceira seção informações -->
+<section  class="container">
+    <div  class="secao3__imagem img">
+        <div  class="secao3__texto">
+            <h1  class="secao3__info">
+            "Descubra a doçura da natureza em cada gota de mel e a versatilidade
+            dos produtos da colmeia. Experimente a pureza e os benefícios dos
+            nossos produtos apícolas!"
+            </h1>
+                <p  class="secao3__info">LuzIA -02-04-24</p>
+        </div>
+    </div>
+</section>
+<!-- fim da terceira seção informações -->
+ <!-- quarta seção contato -->
+<section  class="container secao4">
+    <div  class="secao4__imagem">
+        <img src="img/pote-mel.png" alt="ilustração de potes de mel"/>
+    </div>
+    <div  class="secao4__container">
+        <p  class="secao4__titulo">Contato</p>
+        <p  class="secao4__texto">Luzia</p>
+            <br />
+            <br />
+        <p  class="secao4__email">
+        <span>E-mail: </span>
+        <a href="luzia.siscati@escola.pr.gov.br">luzia.siscati@escola.pr.gov.br</a>
+        </p>
+            <br />
+        <p  class="secao4__fone"><span>Telefone: </span><a  href="tel:+554334725739">(43)3472 57-39</a></p>
+            <br />
+        <p  class="secao4__endereco">
+        <span>Endereço: </span>Av. Minas Gerais, 295 - Ivaiporã, PR, 86870-000
+        </p>
+    </div>
+</section>
+<!-- fim quarta seção contato -->
+ <!--quinta seção Relogio clima -->
+<section  class="container relogio">
+    <div  class="aba-conteudo ativo">
+        <h3  class="aba-conteudo-titulo-principal">Relógio do clima</h3>
+        <h4  class="aba-conteudo-titulo-secundario">Tempo restante para limitar o aquecimento global</h4>
+        <div  class="contador">
+            <div  class="contador-digito">
+                <p  class="contador-digito-numero"  id="dias0">7</p>
+                <p  class="contador-digito-texto">dias</p>
+            </div>
+            <div  class="contador-digito">
+                <p  class="contador-digito-numero"  id="horas0">7</p>
+                <p  class="contador-digito-texto">horas</p>
+            </div>
+            <div  class="contador-digito">
+                <p  class="contador-digito-numero"  id="min0">7</p>
+                <p  class="contador-digito-texto">min</p>
+            </div>
+            <div  class="contador-digito">
+                <p  class="contador-digito-numero"  id="seg0">7</p>
+                <p  class="contador-digito-texto">seg</p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- fim da quinta seção relogio do clima -->
+ 
 </body>
 </html>
