--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agrinho-2025</title>
 
-    <link rel="stylesheet" href=".css">
+    <link rel="stylesheet" href="style.css">
 
   
 </head>
@@ -41,7 +41,9 @@
 <!-- fim da primeira seção -->
 <!-- segunda seção -->
 <section>
-   <div class="secao2__titulo">
+   <div class="secao2__.testediv{
+   color: blueviolet;
+}titulo">
        <p class="secao2__img__titulo">A produção de mel.</p>
    </div>
    <div class="secao2__imagens">
