--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <div class="cabecalho img">
        <img class="logo__principal" src="img/logo.png" alt="Logo" />
        <h1 class="texto__cabecalho">
-           Agrofloresta e a importância da polinização.
+           Agroecologia e a produção de frutas e verduras.
        </h1>
        <a class="cabecalho__botao" href="https://www.nre.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=53&quot; target="_blank" >NRE IVAIPORÃ</a>
            <br />
@@ -23,17 +23,13 @@
     <!-- primeira seção -->
 <section class="container">
    <div class="secao1__descricao">
-       <p class="secao1__titulo">O que é uma Agrofloresta?</p>
+       <p class="secao1__titulo">O que é Agroecologia?</p>
        <p class="secao1__texto">
-       Agrofloresta é um sistema de uso da terra que combina árvores,
-       arbustos, culturas agrícolas e/ou animais em um arranjo ecológico e
-       produtivo. Esses sistemas visam imitar as características das
-       florestas naturais, promovendo a biodiversidade, a reciclagem de
-       nutrientes, a conservação do solo e a regulação do clima. Eles também
-       podem proporcionar uma fonte sustentável de alimentos, produtos
-       florestais, medicamentos e outros recursos. É uma prática que tem
-       ganhado destaque por sua abordagem sustentável e amigável ao meio
-       ambiente.
+   A agroecologia é um sistema de agricultura que visa a produção de alimentos de forma sustentável,
+    respeitando o meio ambiente e promovendo a saúde humana e a justiça social. É uma abordagem que 
+    busca integrar conhecimentos científicos e tradicionais para criar sistemas agrícolas que sejam 
+    produtivos, ecologicamente equilibrados e socialmente justos.
+
        </p>
    </div>
    <img src="img/bananas.png" alt="imagem de um bananal" class="secao1__imagem"/>
