--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
        </p>
    </div>
-   <img src="img/bananas.png" alt="imagem de um bananal" class="secao1__imagem"/>
+   <img src="img/agroecolo.png" alt="imagem de um bananal" class="secao1__imagem"/>
 </section>
 <!-- fim da primeira seção -->
 <!-- segunda seção -->
@@ -40,7 +40,7 @@
    <div class="secao2__.testediv{
    color: blueviolet;
 }titulo">
-       <p class="secao2__img__titulo">A produção de mel.</p>
+       <p class="secao2__img__titulo">A produção de frutas e verduras.</p>
    </div>
    <div class="secao2__imagens">
        <div>
@@ -50,7 +50,7 @@
            <img src="img/2.png" alt="Homen colhendo mel" />
        </div>
        <div>
-           <img src="img/3.png" alt="homen coletando mel" />
+           <img src="img/morango.png" alt="homen coletando mel" />
        </div>
    </div>
    <div class="secao2__subtitulo">
