--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
    </div>
    <div class="secao2__subtitulo">
        <h2 class="secao2__img__subtitulo">
-       As abelhas são responsáveis pela produção de mel, cera e outros
-       produtos apícolas que podem representar uma fonte adicional de renda
-       para os agricultores
+      A produção de frutas e verduras é uma atividade agrícola
+    significativa no Brasil, com destaque para a produção de
+    frutas que coloca o país como o terceiro maior produtor 
+    mundial. A produção de hortaliças também é importante, 
+    com foco em batata, tomate, melancia, alface, cebola e cenoura. 
        </h2>
    </div>
 </section>
